# hyper2kvm

./: .gitignore  AZURE_CODE_REVIEW.md  AZURE_FIXES_APPLIED.md  CODE_DEDUPLICATION_COMPLETE.md  CODE_REVIEW_APPLIED_CHANGES.md  CODE_REVIEW_COMPREHENSIVE.md  CODE_SPLITTING_SESSION_2.md  CODE_SPLITTING_SUMMARY.md  DEPENDENCIES.md  DOCS_IMPROVEMENT_PLAN.md  ECOSYSTEM.md  FILE_HEADERS_ADDED.md  FIXES_SUMMARY.md  HYPERCTL_INTEGRATION_SUMMARY.md  INSTALLATION.md  LIBRARY_API_PROPOSAL.md  LICENSE  LINKEDIN_ARTICLE_HYPER2KVM.md  MANIFEST.in  PERFORMANCE_OPTIMIZATIONS_APPLIED.md  PUBLISHING.md  README.md  REVIEW_ACTION_PLAN.md  SECURITY.md  SECURITY_FIXES_APPLIED.md  SESSION_COMPLETE_SUMMARY.md  TEST-H2KVMCTL.md  TEST-HYPERCTL.md  TEST_REPORT.md  VSPHERE_MODE_REFACTORING.md  cli.md  hyper2kvm.py  hyper2kvm.spec  pyproject.toml  requirements-dev.txt  requirements.txt  rhel.yaml  setup.py  v2v-rhel10.yaml  vmdk2kvm.py
.github/: LABELS.md  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY_SETUP.md  WORKFLOWS.md  create-labels.sh  dependabot.yml  markdown-link-check-config.json
docs/: 00-Index.md  01-Architecture.md  02-Installation.md  03-Quick-Start.md  04-CLI-Reference.md  05-YAML-Examples.md  06-Cookbook.md  07-vSphere-Design.md  08-Library-API.md  10-Daemon-Mode.md  10-Windows-Guide.md  11-Daemon-Enhancements.md  11-Windows-Boot-Cycle.md  12-Enhanced-Daemon-User-Guide.md  13-Integrated-Daemon-Architecture.md  13-Windows-Networking.md  20-RHEL-10.md  21-Photon-OS.md  22-Ubuntu-24.04.md  23-SUSE.md  30-vSphere-V2V.md  90-Failure-Modes.md  99-Optional-Dependencies.md  ARCHITECTURE.md  CLI_REFERENCE.md  FAILURE_MODES.md  H2KVMCTL_INTEGRATION.md  HYPERCTL_INTEGRATION.md  INSTALL.md  QUICKSTART.md  README.md  RHEL10.md  SUSE-TEST.MD  VSPEHERE-V2V-EXPORT.md  WINDOWS.md  YAML-EXAMPLES.md  hyper2kvm-vsphere-design.md  ubuntu-24.04.03.md  windows-10-troubleshoot.md  windows-boot-cycle.md  (+1 more)
examples/: README.md  export_with_h2kvmctl.py  export_with_hyperctl.py  hyper2kvm.json  library_azure_migration.py  library_boot_testing.py  library_guest_fixing.py  library_local_conversion.py  library_vsphere_migration.py
hyper2kvm/: __init__.py  __main__.py
man/: Makefile
md/: CLI_REFERENCE.md
scripts/: bump-version.sh  publish.sh
systemd/: README.md  hyper2kvm.service  hyper2kvm@.service
test-confs/: 01-local-windows-10-vmdk.yaml  01-local-windows-11-vmdk.yaml  02-local-rhel-10-vmdk.yaml  03-local-ubuntu-22-vmdk.yaml  04-local-photon-os-vmdk.yaml  10-vsphere-download-only.yaml  11-vsphere-govc-rhel-10-download.yaml  20-vsphere-v2v-rhel-10-export.yaml  23-vsphere-v2v-rhel-10-ovf-backup.yaml  README.md  (+33 more)
(+406 files in other folders)
